@@ -12,6 +12,7 @@ Version 1.1.1
 * Fix TR2 doberman crashing the game when killed by explosive weapons.
 * Fix volume change in settings not affecting voice track.
 * Fix several lighting bugs.
+* Fix savegame count not properly increasing.
 * Overhaul look mode:
  - Allow for consistent and wider viewing angles while crawling, crouching, and hanging.
  - Improve movement and control.
@@ -25,10 +26,12 @@ Version 1.1.1
  - A negative value requires a trigger to activate.
 
 Lua API changes:
+* Add Flow::EnableLoadSave() function to disable savegames.
 * Add Flow::EnablePointFilter() function to disable bilinear filtering.
 * Add Lara::GetAmmoType() function to read the ammo that Lara is using.
 * Add Lara::GetControlLock() and Lara::SetControlLock() functions to handle controls locking.
 * Add Logic.HandleEvent() function to call node events.
+* Add functions to load, save, and delete savegames.
 * Make Vec2 object float-based instead of integer-based.
 * Add Vec2 arithmetic for division with a number and multiplication with another Vec2.
 * Add log messages warnings to functions AddCallback and RemoveCallback.
